syntax = "proto3";

package BranchDeliverySystem;

message User {
  int64 ID_USER = 1;
  string NAMA = 2;
  string PASSWORD = 3;
  string ROLE = 4;
  string CABANG = 5;
}

message NASABAH {
  int64 CIF = 1;
  int64 NIK = 2;
  string NAMA = 3;
  string TEMPAT_LAHIR = 4;
  string TANGGAL_LAHIR = 5;
  string ALAMAT = 6;
  string NO_TELP = 7;
}

message NASABAH_DETAIL {
  int64 CIF = 1;
  int64 NO_REKENING = 2;
  int64 SALDO = 3;

}

message TRANSAKSI {
  int64 ID = 1;
  int64 ID_USER = 2;
  int64 NO_REKENING = 3;
  string TANGGAL = 4;
  string JENIS_TRANSAKSI = 5;
  int64 NOMINAL = 6;
  int64 SALDO = 7;
  string BERITA = 8;
}

message NASABAH_INFO {
  NASABAH NASABAH = 1;
  NASABAH_DETAIL NASABAH_DETAIL = 2;
}

message OVERBOOKING {
  int64 IdUser = 1;
 NASABAH_DETAIL NasabahDetail1 = 2;
 NASABAH_DETAIL NasabahDetail2 = 3;
 int64 Nominal = 4;
 string BERITA = 5;
}

message CETAKBUKU {
  repeated TRANSAKSI TRANSAKSI= 1;
}

message STATUS {
  int64 status = 1;
}

message EMPTY {
}

service Add {
  rpc LoginUser (User) returns (User);
  rpc SetorTunai(TRANSAKSI) returns (STATUS);
  rpc TarikTunai(TRANSAKSI) returns (STATUS);
  rpc OverBooking(OVERBOOKING) returns (OVERBOOKING);
  rpc CetakBuku(TRANSAKSI) returns (CETAKBUKU);
  rpc FindByNIKOrCIF(NASABAH) returns (NASABAH);
  rpc BuatCif(NASABAH) returns (NASABAH);
  rpc BuatTabungan(NASABAH_INFO) returns (NASABAH_INFO);
  rpc UpdateNasabah(NASABAH) returns (NASABAH_INFO);
}